# BlackNode

./: ARCHITECTURE.md  BlackNode.md  HollowSec.md  INSTALLATION.md  KEYBINDS.md  MODULES.md  PACKAGES.md  README.md  REFERENCE.md  ROFI.md  WAYBAR.md  linkdots  version.json  weather-messages.json  ç
Notes/: El-amor-cada-ves-duele-mas-que-la-ultima-vez-que-lo-senti.md  Mi-primer-amor.md  README.md
Scripts/: SCRIPTS.md  awww.sh  bin.sh  blacknode.sh  cava.sh  changelog.sh  clipse.sh  failed.sh  fastfetch.sh  flatpak.sh  health.sh  help.sh  hyprland.sh  hyprlock.sh  hyprshot.sh  information.sh  install-dotfile.sh  install.sh  introduction.sh  linkdots.sh  nvim.sh  rofi.sh  update.sh  wallpaper.sh  wallust.sh  waybar.sh  welcome.sh  wlogout.sh  yay.sh  yazi.sh  zsh.sh
docs/: ANNOUNCEMENT.md  INSTALLATION.md  KEYBINDS.md  MODULES.md  REFERENCE.md  (+2 more)
src/brain/: Cargo.toml
src/brain/src/: action.rs  algorithm.rs  bus.rs  collector.rs  config.rs  context.rs  decision.rs  engine.rs  lib.rs  main.rs  time.rs
src/brain/src/action/: actions.rs  mod.rs
src/brain/src/algorithm/: anomaly.rs  bayes.rs  context_graph.rs  ewma.rs  kmeans.rs  markov.rs  mod.rs  reinforcement.rs  routine.rs
src/brain/src/api/: mod.rs
src/brain/src/capture/: mod.rs
src/brain/src/collector/: mod.rs  system.rs
src/brain/src/context/: mod.rs
src/brain/src/decision/: engine_trait.rs  mod.rs
src/brain/src/memory/: mod.rs  model.rs  store.rs
src/brain/src/node/: core.rs  graph.rs  mod.rs
src/brain/src/node/nodes/: mod.rs
src/brain/src/predictor/: mod.rs
src/brain/src/storage/: mod.rs
(+536 files in other folders)
