[package]
name = "blacknode-brain"
version = "2.0.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crossbeam-channel = "0.5"
thiserror = "1"

[lib]
name = "blacknode_brain"
path = "src/lib.rs"

[[bin]]
name = "blacknode-brain"
path = "src/main.rs"
